# authoringfw

./: .gitignore  CHANGELOG.md  Makefile  README.md  catalog-info.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/scripts/: bootstrap_labels.py
.github/workflows/: publish.yml  test.yml
.windsurf/workflows/: agent-session-start.md  agentic-coding.md  release.md  repo-health-check.md
demo/: ui.html
src/authoringfw/: __init__.py  base.py  consistency.py  exceptions.py  planning.py  types.py
src/authoringfw/adapters/: __init__.py  interfaces.py
src/authoringfw/analysis/: __init__.py  analysis.py  types.py
src/authoringfw/formats/: base.py
src/authoringfw/research/: __init__.py  research.py  types.py
src/authoringfw/schema/: character.py  scene.py  story.py  style.py  versioning.py  world.py
src/authoringfw/text/: __init__.py  reformat.py
src/authoringfw/writing/: __init__.py  chapter.py  summary.py  types.py
tests/: test_analysis.py  test_async_execute.py  test_base.py  test_contracts.py  test_exceptions.py  test_planning.py  test_research.py  test_schema.py  test_writing.py
