[project]
name = "iil-authoringfw"
version = "0.8.0"
description = "Authoring Framework — domain schemas and orchestration base for AI-assisted creative writing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Achim Dehnert", email = "achim@dehnert.com"}
]
keywords = ["llm", "authoring", "creative-writing", "ai", "story", "schema", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
aifw = [
    "iil-aifw>=0.6.1",
]
yaml = [
    "pyyaml>=6.0",
]
all = [
    "pyyaml>=6.0",
    "iil-aifw>=0.6.1",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23",
]
testing = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/achimdehnert/authoringfw"
Repository = "https://github.com/achimdehnert/authoringfw"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/authoringfw"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
